# PlaneBoundary

./: .gitignore  CMakeLists.txt  README.md
include/worm/: base.hpp  fine.hpp  moore.hpp  worm.hpp
src/: CMakeLists.txt  header.hpp  main.cpp
test/: CMakeLists.txt  rotation.cpp
